--- a/apps/bulldozer-cli/project.json
+++ b/apps/bulldozer-cli/project.json
@@ -125,9 +125,15 @@
 			"executor": "@nrwl/workspace:run-commands",
 			"options": {
 				"commands": [
-					"rm -rf dist/apps/bulldozer-cli/",
-					"ncc build apps/bulldozer-cli/src/main.ts --license licenses.txt --minify --out dist/apps/bulldozer-cli",
-					"node dist/apps/bulldozer-cli/main.js get-workspace {args.workspaceId} {args.plain}"
+					{
+						"command": "rm -rf dist/apps/bulldozer-cli/",
+						"forwardAllArgs": false
+					},
+					{
+						"command": "ncc build apps/bulldozer-cli/src/main.ts --license licenses.txt --minify --out dist/apps/bulldozer-cli",
+						"forwardAllArgs": false
+					},
+					"node dist/apps/bulldozer-cli/index.js get-workspace {args.workspaceId} {args.plain}"
 				],
 				"parallel": false,
 				"envFile": "apps/bulldozer-cli/.env"
