--- a/apps/bulldozer-cli/package.json
+++ b/apps/bulldozer-cli/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@andresmgsl2/bulldozer-cli",
-	"version": "0.0.51",
+	"name": "@heavy-duty/bulldozer-cli",
+	"version": "0.1.0-beta.2",
 	"main": "index.js",
 	"bin": {
 		"bulldozer": "index.js"
