--- a/libs/wallet-adapter/ui/cdk/package.json
+++ b/libs/wallet-adapter/ui/cdk/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@heavy-duty/wallet-adapter-cdk",
-	"version": "0.3.0-beta.1",
+	"version": "0.3.0",
 	"publishConfig": {
 		"access": "public"
 	},
