--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "14.0.0",
-		"@angular/cdk": "14.0.0",
-		"@angular/common": "14.0.0",
-		"@angular/compiler": "14.0.0",
-		"@angular/core": "14.0.0",
-		"@angular/forms": "14.0.0",
-		"@angular/material": "14.0.0",
-		"@angular/platform-browser": "14.0.0",
-		"@angular/platform-browser-dynamic": "14.0.0",
-		"@angular/router": "14.0.0",
+		"@angular/animations": "14.0.3",
+		"@angular/cdk": "14.0.3",
+		"@angular/common": "14.0.3",
+		"@angular/compiler": "14.0.3",
+		"@angular/core": "14.0.3",
+		"@angular/forms": "14.0.3",
+		"@angular/material": "14.0.3",
+		"@angular/platform-browser": "14.0.3",
+		"@angular/platform-browser-dynamic": "14.0.3",
+		"@angular/router": "14.0.3",
 		"@heavy-duty/anchor": "^0.24.2-2",
 		"@materia-ui/ngx-monaco-editor": "^6.0.0",
 		"@nestjs/axios": "0.0.8",
@@ -29,17 +29,17 @@
 		"@nestjs/platform-express": "8.4.6",
 		"@nestjs/platform-ws": "8.4.6",
 		"@nestjs/websockets": "8.4.6",
-		"@ngrx/component": "14.0.0-beta.0",
-		"@ngrx/component-store": "14.0.0-beta.0",
+		"@ngrx/component": "14.0.0",
+		"@ngrx/component-store": "14.0.0",
 		"@ngx-formly/core": "^5.12.4",
 		"@ngx-formly/material": "^5.12.4",
-		"@nrwl/angular": "14.2.1",
+		"@nrwl/angular": "14.3.6",
 		"@octokit/rest": "^18.12.0",
 		"@solana/buffer-layout": "4.0.0",
 		"@solana/spl-token": "0.2.0",
 		"@solana/wallet-adapter-base": "0.9.5",
 		"@solana/wallet-adapter-wallets": "0.15.5",
-		"@solana/web3.js": "1.43.5",
+		"@solana/web3.js": "^1.44.2",
 		"bs58": "^5.0.0",
 		"case": "^1.6.3",
 		"chalk": "^4.1.2",
@@ -55,7 +55,6 @@
 		"monaco-editor": "^0.32.1",
 		"nest-commander": "^2.5.0",
 		"ora-classic": "^5.4.2",
-		"probot": "^12.2.2",
 		"qrcode": "^1.5.0",
 		"qs": "^6.10.3",
 		"reflect-metadata": "^0.1.13",
@@ -66,27 +65,27 @@
 		"zone.js": "0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "14.0.0",
+		"@angular-devkit/build-angular": "14.0.3",
 		"@angular-eslint/eslint-plugin": "13.2.1",
 		"@angular-eslint/eslint-plugin-template": "13.2.1",
 		"@angular-eslint/template-parser": "13.2.1",
-		"@angular/cli": "~14.0.0",
-		"@angular/compiler-cli": "14.0.0",
-		"@angular/language-service": "14.0.0",
+		"@angular/cli": "14.0.3",
+		"@angular/compiler-cli": "14.0.3",
+		"@angular/language-service": "14.0.3",
 		"@commitlint/cli": "^13.2.1",
 		"@commitlint/config-conventional": "^13.2.0",
 		"@danmt/nx-anchor": "0.0.6",
 		"@nestjs/schematics": "^8.0.11",
 		"@nestjs/testing": "^8.4.6",
-		"@nrwl/cli": "14.2.1",
-		"@nrwl/cypress": "14.2.1",
-		"@nrwl/eslint-plugin-nx": "14.2.1",
-		"@nrwl/jest": "14.2.1",
-		"@nrwl/js": "14.2.1",
-		"@nrwl/linter": "14.2.1",
-		"@nrwl/nest": "14.2.1",
-		"@nrwl/node": "14.2.1",
-		"@nrwl/workspace": "14.2.1",
+		"@nrwl/cli": "14.3.6",
+		"@nrwl/cypress": "14.3.6",
+		"@nrwl/eslint-plugin-nx": "14.3.6",
+		"@nrwl/jest": "14.3.6",
+		"@nrwl/js": "14.3.6",
+		"@nrwl/linter": "14.3.6",
+		"@nrwl/nest": "14.3.6",
+		"@nrwl/node": "14.3.6",
+		"@nrwl/workspace": "14.3.6",
 		"@tailwindcss/line-clamp": "^0.4.0",
 		"@types/chai": "^4.2.21",
 		"@types/chalk": "^2.2.0",
@@ -111,14 +110,15 @@
 		"jest-preset-angular": "11.1.2",
 		"lint-staged": "^11.2.3",
 		"mocha": "^9.1.3",
-		"ng-packagr": "~14.0.0",
-		"nx": "14.2.1",
+		"ng-packagr": "14.0.0",
+		"nx": "14.3.6",
 		"postcss": "^8.3.9",
 		"postcss-import": "14.1.0",
 		"postcss-preset-env": "7.5.0",
 		"postcss-url": "10.1.3",
 		"prettier": "2.6.2",
 		"prettier-plugin-organize-attributes": "^0.0.5",
+		"probot": "^12.2.4",
 		"smee-client": "^1.2.3",
 		"tailwindcss": "^3.0.24",
 		"ts-jest": "27.1.4",
