--- a/libs/wallet-adapter/data-access/package.json
+++ b/libs/wallet-adapter/data-access/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@heavy-duty/wallet-adapter",
-	"version": "0.3.0-beta.1",
+	"version": "0.3.2",
 	"publishConfig": {
 		"access": "public"
 	},
