--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "14.0.3",
-		"@angular/cdk": "14.0.3",
-		"@angular/common": "14.0.3",
-		"@angular/compiler": "14.0.3",
-		"@angular/core": "14.0.3",
-		"@angular/forms": "14.0.3",
-		"@angular/material": "14.0.3",
-		"@angular/platform-browser": "14.0.3",
-		"@angular/platform-browser-dynamic": "14.0.3",
-		"@angular/router": "14.0.3",
+		"@angular/animations": "14.1.0",
+		"@angular/cdk": "14.1.0",
+		"@angular/common": "14.1.0",
+		"@angular/compiler": "14.1.0",
+		"@angular/core": "14.1.0",
+		"@angular/forms": "14.1.0",
+		"@angular/material": "14.1.0",
+		"@angular/platform-browser": "14.1.0",
+		"@angular/platform-browser-dynamic": "14.1.0",
+		"@angular/router": "14.1.0",
 		"@heavy-duty/anchor": "^0.24.2-2",
 		"@materia-ui/ngx-monaco-editor": "^6.0.0",
 		"@nestjs/axios": "0.0.8",
-		"@nestjs/common": "8.4.6",
-		"@nestjs/core": "8.4.6",
-		"@nestjs/platform-express": "8.4.6",
+		"@nestjs/common": "9.0.7",
+		"@nestjs/core": "9.0.7",
+		"@nestjs/platform-express": "9.0.7",
 		"@nestjs/platform-ws": "8.4.6",
 		"@nestjs/websockets": "8.4.6",
-		"@ngrx/component": "14.0.0",
-		"@ngrx/component-store": "14.0.0",
+		"@ngrx/component": "14.0.2",
+		"@ngrx/component-store": "14.0.2",
 		"@ngx-formly/core": "^5.12.4",
 		"@ngx-formly/material": "^5.12.4",
-		"@nrwl/angular": "14.3.6",
+		"@nrwl/angular": "14.5.2",
 		"@octokit/rest": "^18.12.0",
 		"@solana/buffer-layout": "4.0.0",
 		"@solana/spl-token": "0.2.0",
@@ -65,27 +65,27 @@
 		"zone.js": "0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "14.0.3",
-		"@angular-eslint/eslint-plugin": "13.2.1",
-		"@angular-eslint/eslint-plugin-template": "13.2.1",
-		"@angular-eslint/template-parser": "13.2.1",
-		"@angular/cli": "14.0.3",
-		"@angular/compiler-cli": "14.0.3",
-		"@angular/language-service": "14.0.3",
+		"@angular-devkit/build-angular": "14.1.0",
+		"@angular-eslint/eslint-plugin": "14.0.2",
+		"@angular-eslint/eslint-plugin-template": "14.0.2",
+		"@angular-eslint/template-parser": "14.0.2",
+		"@angular/cli": "~14.1.0",
+		"@angular/compiler-cli": "14.1.0",
+		"@angular/language-service": "14.1.0",
 		"@commitlint/cli": "^13.2.1",
 		"@commitlint/config-conventional": "^13.2.0",
 		"@danmt/nx-anchor": "0.0.6",
-		"@nestjs/schematics": "^8.0.11",
-		"@nestjs/testing": "^8.4.6",
-		"@nrwl/cli": "14.3.6",
-		"@nrwl/cypress": "14.3.6",
-		"@nrwl/eslint-plugin-nx": "14.3.6",
-		"@nrwl/jest": "14.3.6",
-		"@nrwl/js": "14.3.6",
-		"@nrwl/linter": "14.3.6",
-		"@nrwl/nest": "14.3.6",
-		"@nrwl/node": "14.3.6",
-		"@nrwl/workspace": "14.3.6",
+		"@nestjs/schematics": "9.0.1",
+		"@nestjs/testing": "9.0.7",
+		"@nrwl/cli": "14.5.2",
+		"@nrwl/cypress": "14.5.2",
+		"@nrwl/eslint-plugin-nx": "14.5.2",
+		"@nrwl/jest": "14.5.2",
+		"@nrwl/js": "14.5.2",
+		"@nrwl/linter": "14.5.2",
+		"@nrwl/nest": "14.5.2",
+		"@nrwl/node": "14.5.2",
+		"@nrwl/workspace": "14.5.2",
 		"@tailwindcss/line-clamp": "^0.4.0",
 		"@types/chai": "^4.2.21",
 		"@types/chalk": "^2.2.0",
@@ -93,11 +93,11 @@
 		"@types/jest": "27.4.1",
 		"@types/js-yaml": "^4.0.5",
 		"@types/mocha": "^9.0.0",
-		"@types/node": "^14.18.21",
+		"@types/node": "18.0.0",
 		"@types/qrcode": "^1.4.2",
 		"@types/uuid": "^8.3.4",
-		"@typescript-eslint/eslint-plugin": "^5.27.1",
-		"@typescript-eslint/parser": "^5.24.0",
+		"@typescript-eslint/eslint-plugin": "5.32.0",
+		"@typescript-eslint/parser": "5.32.0",
 		"@vercel/ncc": "^0.34.0",
 		"autoprefixer": "^10.3.7",
 		"chai": "^4.3.4",
@@ -110,8 +110,8 @@
 		"jest-preset-angular": "11.1.2",
 		"lint-staged": "^11.2.3",
 		"mocha": "^9.1.3",
-		"ng-packagr": "14.0.0",
-		"nx": "14.3.6",
+		"ng-packagr": "14.1.0",
+		"nx": "14.5.2",
 		"postcss": "^8.3.9",
 		"postcss-import": "14.1.0",
 		"postcss-preset-env": "7.5.0",
