chore(core): bump solana deps

--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
 		"@octokit/rest": "^18.12.0",
 		"@solana/buffer-layout": "4.0.0",
 		"@solana/spl-token": "0.2.0",
-		"@solana/wallet-adapter-base": "0.9.5",
-		"@solana/wallet-adapter-wallets": "0.15.5",
-		"@solana/web3.js": "^1.44.2",
+		"@solana/wallet-adapter-base": "0.9.9",
+		"@solana/wallet-adapter-wallets": "0.17.0",
+		"@solana/web3.js": "1.50.1",
 		"bs58": "^5.0.0",
 		"case": "^1.6.3",
 		"chalk": "^4.1.2",
