chore(core): fix some monorepo stuff from nx

--- a/libs/bulldozer/client/instructions/modals/edit-instruction-mint/project.json
+++ b/libs/bulldozer/client/instructions/modals/edit-instruction-mint/project.json
@@ -11,6 +11,7 @@
 			],
 			"options": {
 				"jestConfig": "libs/bulldozer/client/instructions/modals/edit-instruction-mint/jest.config.ts",
+				"tsConfig": "libs/bulldozer/client/instructions/modals/edit-instruction-mint/tsconfig.json",
 				"passWithNoTests": true
 			}
 		},
