--- a/libs/wallet-adapter/ui/blueprint/project.json
+++ b/libs/wallet-adapter/ui/blueprint/project.json
@@ -10,7 +10,7 @@
 			"options": {
 				"project": "libs/wallet-adapter/ui/blueprint/ng-package.json",
 				"tailwindConfig": "libs/wallet-adapter/ui/blueprint/tailwind.config.js",
-				"tsConfig": "libs/wallet-adapter/ui/blueprint/tsconfig.lib.json"
+				"tsConfig": "libs/wallet-adapter/ui/blueprint/tsconfig.json"
 			},
 			"configurations": {
 				"production": {
