--- a/libs/wallet-adapter/ui/cdk/tsconfig.json
+++ b/libs/wallet-adapter/ui/cdk/tsconfig.json
@@ -20,7 +20,8 @@
 		"noPropertyAccessFromIndexSignature": true,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
-		"target": "es2020"
+		"target": "ES2022",
+		"useDefineForClassFields": false
 	},
 	"angularCompilerOptions": {
 		"strictInjectionParameters": true,
