--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
 		"husky": "^7.0.2",
 		"jest": "28.1.3",
 		"jest-environment-jsdom": "28.1.1",
-		"jest-preset-angular": "^12.2.2",
+		"jest-preset-angular": "12.2.3",
 		"lint-staged": "^11.2.3",
 		"mocha": "^9.1.3",
 		"ng-packagr": "15.0.1",
