--- a/package.json
+++ b/package.json
@@ -1,140 +1,141 @@
 {
-	"name": "heavy-duty",
-	"version": "0.0.0",
-	"license": "MIT",
-	"scripts": {
-		"start": "nx serve",
-		"build": "nx build",
-		"test": "nx test",
-		"postinstall": "ngcc --properties es2020 browser module main",
-		"format": "nx format:write"
-	},
-	"private": true,
-	"dependencies": {
-		"@angular/animations": "15.0.1",
-		"@angular/cdk": "15.0.0",
-		"@angular/common": "15.0.1",
-		"@angular/compiler": "15.0.1",
-		"@angular/core": "15.0.1",
-		"@angular/forms": "15.0.1",
-		"@angular/material": "15.0.0",
-		"@angular/platform-browser": "15.0.1",
-		"@angular/platform-browser-dynamic": "15.0.1",
-		"@angular/router": "15.0.1",
-		"@heavy-duty/anchor": "^0.24.2-2",
-		"@materia-ui/ngx-monaco-editor": "^6.0.0",
-		"@nestjs/axios": "1.0.0",
-		"@nestjs/common": "9.0.7",
-		"@nestjs/core": "9.0.7",
-		"@nestjs/platform-express": "9.0.7",
-		"@nestjs/platform-ws": "9.2.0",
-		"@nestjs/websockets": "9.2.0",
-		"@ngrx/component": "15.0.0-rc.0",
-		"@ngrx/component-store": "15.0.0-rc.0",
-		"@ngx-formly/core": "^6.0.2",
-		"@ngx-formly/material": "^6.0.2",
-		"@nrwl/angular": "15.2.1",
-		"@octokit/rest": "^18.12.0",
-		"@solana/buffer-layout": "4.0.0",
-		"@solana/spl-token": "0.2.0",
-		"@solana/wallet-adapter-base": "^0.9.18",
-		"@solana/wallet-adapter-wallets": "^0.19.5",
-		"@solana/web3.js": "^1.66.2",
-		"bs58": "^5.0.0",
-		"case": "^1.6.3",
-		"chalk": "^4.1.2",
-		"cli-spinners": "^2.6.1",
-		"dotenv": "^16.0.1",
-		"express": "^4.18.1",
-		"figlet": "^1.5.2",
-		"file-saver": "^2.0.5",
-		"handlebars": "^4.7.7",
-		"immutable": "^4.0.0",
-		"js-yaml": "^4.1.0",
-		"jszip": "^3.7.1",
-		"monaco-editor": "^0.32.1",
-		"nest-commander": "^3.3.0",
-		"ora-classic": "^5.4.2",
-		"qrcode": "^1.5.0",
-		"qs": "^6.10.3",
-		"reflect-metadata": "^0.1.13",
-		"rxjs": "~7.5.0",
-		"tslib": "^2.0.0",
-		"tweetnacl": "^1.0.3",
-		"uuid": "^8.3.2",
-		"xstate": "^4.32.1",
-		"zone.js": "0.11.4"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "15.0.0",
-		"@angular-eslint/eslint-plugin": "15.0.0",
-		"@angular-eslint/eslint-plugin-template": "15.0.0",
-		"@angular-eslint/template-parser": "15.0.0",
-		"@angular/cli": "~15.0.0",
-		"@angular/compiler-cli": "15.0.1",
-		"@angular/language-service": "15.0.1",
-		"@commitlint/cli": "^13.2.1",
-		"@commitlint/config-conventional": "^13.2.0",
-		"@danmt/nx-anchor": "0.0.6",
-		"@nestjs/schematics": "9.0.1",
-		"@nestjs/testing": "9.0.7",
-		"@nrwl/cli": "15.2.1",
-		"@nrwl/cypress": "15.2.1",
-		"@nrwl/eslint-plugin-nx": "15.2.1",
-		"@nrwl/jest": "15.2.1",
-		"@nrwl/js": "15.2.1",
-		"@nrwl/linter": "15.2.1",
-		"@nrwl/nest": "15.2.1",
-		"@nrwl/node": "15.2.1",
-		"@nrwl/workspace": "15.2.1",
-		"@tailwindcss/line-clamp": "^0.4.0",
-		"@types/chai": "^4.2.21",
-		"@types/chalk": "^2.2.0",
-		"@types/file-saver": "^2.0.3",
-		"@types/jest": "28.1.8",
-		"@types/js-yaml": "^4.0.5",
-		"@types/mocha": "^9.0.0",
-		"@types/node": "18.7.1",
-		"@types/qrcode": "^1.4.2",
-		"@types/uuid": "^8.3.4",
-		"@typescript-eslint/eslint-plugin": "5.43.0",
-		"@typescript-eslint/parser": "5.43.0",
-		"@vercel/ncc": "^0.34.0",
-		"autoprefixer": "^10.3.7",
-		"chai": "^4.3.4",
-		"cypress": "^8.6.0",
-		"eslint": "^8.17.0",
-		"eslint-config-prettier": "8.1.0",
-		"eslint-plugin-cypress": "^2.10.3",
-		"husky": "^7.0.2",
-		"jest": "28.1.3",
-		"jest-environment-jsdom": "28.1.1",
-		"jest-preset-angular": "12.2.3",
-		"lint-staged": "^11.2.3",
-		"mocha": "^9.1.3",
-		"ng-packagr": "15.0.1",
-		"nx": "15.2.1",
-		"postcss": "^8.3.9",
-		"postcss-import": "14.1.0",
-		"postcss-preset-env": "7.5.0",
-		"postcss-url": "10.1.3",
-		"prettier": "2.6.2",
-		"prettier-plugin-organize-attributes": "^0.0.5",
-		"probot": "^12.2.4",
-		"smee-client": "^1.2.3",
-		"tailwindcss": "^3.0.24",
-		"ts-jest": "28.0.8",
-		"ts-node": "10.9.1",
-		"typescript": "4.8.4"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"*.{js,json,css,scss,md,ts,html}": [
-			"npm run format --uncommitted"
-		]
-	}
+  "name": "heavy-duty",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "postinstall": "ngcc --properties es2020 browser module main",
+    "format": "nx format:write"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "15.0.1",
+    "@angular/cdk": "15.0.0",
+    "@angular/common": "15.0.1",
+    "@angular/compiler": "15.0.1",
+    "@angular/core": "15.0.1",
+    "@angular/forms": "15.0.1",
+    "@angular/material": "15.0.0",
+    "@angular/platform-browser": "15.0.1",
+    "@angular/platform-browser-dynamic": "15.0.1",
+    "@angular/router": "15.0.1",
+    "@heavy-duty/anchor": "^0.24.2-2",
+    "@materia-ui/ngx-monaco-editor": "^6.0.0",
+    "@nestjs/axios": "1.0.0",
+    "@nestjs/common": "9.0.7",
+    "@nestjs/core": "9.0.7",
+    "@nestjs/platform-express": "9.0.7",
+    "@nestjs/platform-ws": "9.2.0",
+    "@nestjs/websockets": "9.2.0",
+    "@ngrx/component": "15.0.0",
+    "@ngrx/component-store": "15.0.0",
+    "@ngx-formly/core": "^6.0.2",
+    "@ngx-formly/material": "^6.0.2",
+    "@nrwl/angular": "15.4.5",
+    "@octokit/rest": "^18.12.0",
+    "@solana/buffer-layout": "4.0.0",
+    "@solana/spl-token": "0.2.0",
+    "@solana/wallet-adapter-base": "^0.9.18",
+    "@solana/wallet-adapter-wallets": "^0.19.5",
+    "@solana/web3.js": "^1.66.2",
+    "bs58": "^5.0.0",
+    "case": "^1.6.3",
+    "chalk": "^4.1.2",
+    "cli-spinners": "^2.6.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "figlet": "^1.5.2",
+    "file-saver": "^2.0.5",
+    "handlebars": "^4.7.7",
+    "immutable": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "jszip": "^3.7.1",
+    "monaco-editor": "^0.32.1",
+    "nest-commander": "^3.3.0",
+    "ora-classic": "^5.4.2",
+    "qrcode": "^1.5.0",
+    "qs": "^6.10.3",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.0.0",
+    "tweetnacl": "^1.0.3",
+    "uuid": "^8.3.2",
+    "xstate": "^4.32.1",
+    "zone.js": "0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "15.0.0",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
+    "@angular/cli": "~15.0.0",
+    "@angular/compiler-cli": "15.0.1",
+    "@angular/language-service": "15.0.1",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@danmt/nx-anchor": "0.0.6",
+    "@nestjs/schematics": "9.0.1",
+    "@nestjs/testing": "9.0.7",
+    "@nrwl/cli": "15.4.5",
+    "@nrwl/cypress": "15.4.5",
+    "@nrwl/eslint-plugin-nx": "15.4.5",
+    "@nrwl/jest": "15.4.5",
+    "@nrwl/js": "15.4.5",
+    "@nrwl/linter": "15.4.5",
+    "@nrwl/nest": "15.4.5",
+    "@nrwl/node": "15.4.5",
+    "@nrwl/workspace": "15.4.5",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/chai": "^4.2.21",
+    "@types/chalk": "^2.2.0",
+    "@types/file-saver": "^2.0.3",
+    "@types/jest": "28.1.8",
+    "@types/js-yaml": "^4.0.5",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "18.7.1",
+    "@types/qrcode": "^1.4.2",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "@vercel/ncc": "^0.34.0",
+    "autoprefixer": "^10.3.7",
+    "chai": "^4.3.4",
+    "cypress": "^8.6.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^7.0.2",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "12.2.3",
+    "lint-staged": "^11.2.3",
+    "mocha": "^9.1.3",
+    "ng-packagr": "15.0.1",
+    "nx": "15.4.5",
+    "postcss": "^8.3.9",
+    "postcss-import": "14.1.0",
+    "postcss-preset-env": "7.5.0",
+    "postcss-url": "10.1.3",
+    "prettier": "2.6.2",
+    "prettier-plugin-organize-attributes": "^0.0.5",
+    "probot": "^12.2.4",
+    "smee-client": "^1.2.3",
+    "tailwindcss": "^3.0.24",
+    "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,md,ts,html}": [
+      "npm run format --uncommitted"
+    ]
+  }
 }
+
